# bitcoin-price-predictor-app

./: .gitattributes  .gitignore  README.md  app_streamlit.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: crypto_data_processed.parquet  yfinance_20250312.parquet
models/: lstm_model.h5
src/bitcoin_price_predictor_app/: data_utils.py  models.py  streamlit_app.py
src/utils/: data_process_utils.py  data_viz_utils.py  model_utils.py
